--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-   "name": "Edahabia-interactive-paycard-Angular",
-   "author": "@raaaouf",  "version": "1.0.1",
+  "name": "Edahabia-interactive-paycard-Angular",
+  "author": "@raaaouf", 
+  "version": "1.0.1",
   "license": "MIT",
   "engines": {
     "node": "12.16.3",
